--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -26,11 +26,11 @@ springdoc:
 ---
 eureka:
   client:
-    enabled: true
+    enabled: false
     healthcheck:
-      enabled: true
-    fetch-registry: true
-    register-with-eureka: true
+      enabled: false
+    fetch-registry: false
+    register-with-eureka: false
     instance-info-replication-interval-seconds: 10
     registry-fetch-interval-seconds: 10
   instance:
