--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -15,10 +15,10 @@
 
 logging:
   level:
-    ROOT: INFO
-    tech.jhipster: INFO
-    org.hibernate.SQL: INFO
-    com.eclipsoft.face2face: INFO
+    ROOT: DEBUG
+    tech.jhipster: DEBUG
+    org.hibernate.SQL: DEBUG
+    com.eclipsoft.face2face: DEBUG
 
 eureka:
   instance:
